# setu-py

./: gunicorn_config.py  pyproject.toml
setu_py/: app.py  db.py
