[tool.poetry]
name = "setu-py"
version = "0.1.0"
description = ""
authors = ["Ghanshyam Thakkar <shyamthakkar001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.2"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
